Varianta finala la sfarsitul modulului CSS

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- END GALLERY ----- -->
 
     <!-- RSVP ------------ -->
-    <div id="contact">
+    <section id="contact">
         <div class="container">
             <div class="heading-padding">
                 <h1 class="heading-padding">Reservations</h1>
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
      <!-- END RSVP ------- -->
 
     <!-- FOOTER ---------- -->
